# gd32F303_Cmake

./: .gitignore  CMakeLists.txt  arm-none-eabi.cmake  gd32f303_cmsisdap.cfg  readme.md
.github/workflows/: ci.yml
app/demo_flash/inc/: app_demo_flash.h
app/demo_flash/src/: app_demo_flash.c  main.c
app/demo_helloworld/src/: main.c
boards/demo_board/: board.c  board.h
boards/demo_board/config/: gpio_table.def  spi_table.def
docs/: architecture.md
gcc_startup/: startup_gd32f30x_hd.S
inc/: auto_init.h  gd32f307c_eval.h
ldscripts/: gd32f30x_flash.ld
platform/common/reusable/: rtt_log.h  rtt_log_compat.h
platform/drivers/sfud/: README.md
platform/drivers/sfud/inc/: sfud_cfg.h
platform/drivers/sfud/port/: sfud_port.c
platform/hal/inc/: hal_delay.h  hal_gpio.h  hal_spi.h
platform/hal/src/: hal_gpio.c  hal_spi.c
platform/hal/src/gd32f30x/: gd32f30x_it.c  hal_delay.c  port_gpio.c  port_spi.c
platform/mhal/inc/: i_uart.h  mhal_delay.h  mhal_gpio.h  mhal_spi.h
platform/mhal/src/: mhal_gpio.c  mhal_spi.c
platform/mhal/src/gd32f30x/: mhal_delay.c  mhal_gpio.c  port_gpio.c  port_spi.c
platform/utils/: README.md  SEGGER_RTT_Conf.h  rtt_log.c  rtt_log_compat.h
projects/demo_product/: main.c
projects/demo_product/bsp/board_config/: board_init.c  board_init.h  gpio_cfg.c  gpio_cfg.h  gpio_cfg.json  mhal_gpio_table.def  mhal_spi_table.def
src/: gd32f30x_it.c  main.c
tools/: GD32F30x_HD.svd  gen_gpio_cfg.py  generate_review_report.py  test_generate_review_report.py
